Refactoring to Java 11 with co-pilot.